@@ -1,6 +1,7 @@
 ver 0.22.7 (not yet released)
 * protocol
   - don't use glibc extension to parse time stamps
+  - optimize the "albumart" command
 * input
   - curl: send user/password in the first request, save one roundtrip
 * decoder
